<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/empty"
        android:icon="@drawable/ic_menu"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_add_beacon"
                android:orderInCategory="101"
                android:icon="@drawable/ic_plus_circle"
                android:title="@string/menu_add_beacon"
                app:showAsAction="ifRoom|withText"
                />
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="102"
                android:icon="@drawable/ic_settings_outline"
                android:title="@string/menu_settings"
                app:showAsAction="ifRoom|withText"
                />
            <item
                android:id="@+id/action_about"
                android:orderInCategory="103"
                android:icon="@drawable/ic_about_outline"
                android:title="@string/menu_about"
                app:showAsAction="ifRoom|withText"
                />
        </menu>
    </item>
</menu>
